--- a/src/globals.css
+++ b/src/globals.css
@@ -7,6 +7,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #f0f0f0;
+    align-items: flex-start;
 }
 
 .container {
@@ -24,6 +25,8 @@ h1 {
     text-align: left;
     margin-bottom: 20px;
     color: #333;
+    text-align: center;
+    text-decoration: underline;
 }
 
 ol {
@@ -33,26 +36,85 @@ ol {
 
 li {
     margin-bottom: 12px;
+    padding: 6px;
 }
 
 li a {
     display: block;
-    padding: 12px;
+    padding: 13px;
     border-radius: 6px;
     background-color: #f5f5f5;
     color: #333;
     text-decoration: none;
     transition: background-color 0.3s ease;
+    border: 3px double rgb(132, 0, 255);
 }
 
 li a:hover {
-    background-color: #e0e0e0;
+    background-color: #acacac;
 }
 
 img{
-    width: 450px;
-    height: 450px;
+    width: 550px;
+    height: 350px;
     border-radius: 10px;
+}
+
+.bloco-produtos{
+    width: 50%;
+    height: 50vh;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 5%;
+    margin: 1rem;
+    align-items: center;
+    justify-content: center;
+    
+    
+}
+.bloco-produtos div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.bloco-produtos div div{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+
+}
+
+.bloco-principal{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: rgb(236, 236, 236);
+    
+}
+
+.bloco-pedidos{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.bloco-pedidos div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.bloco-pedidos div div{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+
 }
 
 @media (max-width: 768px) {
@@ -69,6 +131,18 @@ img{
     }
 }
 
-div{
-    border: 1px solid rgb(41, 41, 41);
+#divLista{
+    border: 3px solid rgb(68, 0, 255);
+    border-style: dashed;
+}
+
+#centralizacao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.h1-titulo{
+    padding: 12px;
 }
