--- a/src/globals.css
+++ b/src/globals.css
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     background-color: #f0f0f0;
     align-items: flex-start;
+    background: linear-gradient(45deg, rgb(143, 154, 255), rgb(121, 239, 255), rgb(44, 255, 223))
 }
 
 .container {
@@ -29,6 +30,13 @@ h1 {
     text-decoration: underline;
 }
 
+.produto-nome{
+    font-size: 19px;
+    font-weight: bold;
+    color: #333;
+    text-decoration: underline;
+}
+
 ol {
     list-style-type: none;
     padding: 0;
@@ -46,12 +54,12 @@ li a {
     background-color: #f5f5f5;
     color: #333;
     text-decoration: none;
-    transition: background-color 0.3s ease;
-    border: 3px double rgb(132, 0, 255);
+    transition: background-color 0.4s ease;
+    border: 1px double rgb(157, 52, 255);
 }
 
 li a:hover {
-    background-color: #acacac;
+    background-color: #bac1ff;
 }
 
 img{
@@ -73,12 +81,14 @@ img{
     
     
 }
+
 .bloco-produtos div{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
 .bloco-produtos div div{
     display: flex;
     flex-direction: row;
@@ -90,9 +100,7 @@ img{
     display: flex;
     width: 100%;
     flex-direction: row;
-    justify-content: space-between;
-    background-color: rgb(236, 236, 236);
-    
+    justify-content: space-between;    
 }
 
 .bloco-pedidos{
@@ -110,11 +118,55 @@ img{
     justify-content: center;
     align-items: center;
 }
+
 .bloco-pedidos div div{
     display: flex;
     flex-direction: row;
     gap: 10px;
 
+}
+
+.button-adicionar{
+    border-radius: 1rem;
+    border: none;
+    color: white;
+    background-color: rgb(117, 180, 0);
+    padding: 1rem;
+    transition: 300ms ease;
+}
+.button-adicionar:hover{
+    cursor: pointer;
+    background-color: rgb(59, 90, 0)
+}
+
+.button-remover{
+    border-radius: 1rem;
+    border: none;
+    color: white;
+    background-color: rgb(187, 0, 0);
+    padding: 1rem;
+    transition: 300ms ease;
+}
+.button-remover:hover{
+    cursor: pointer;
+    background-color: rgb(105, 0, 0)
+}
+
+#divLista{
+    border: 3px solid rgb(68, 0, 255);
+    border-style: dashed;
+    background: linear-gradient(45deg, rgb(146, 193, 255) , rgb(216, 255, 249), rgb(146, 193, 255))
+}
+
+#centralizacao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.h1-titulo{
+    padding: 12px;
 }
 
 @media (max-width: 768px) {
@@ -129,20 +181,4 @@ img{
     li a {
         padding: 10px;
     }
-}
-
-#divLista{
-    border: 3px solid rgb(68, 0, 255);
-    border-style: dashed;
-}
-
-#centralizacao {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.h1-titulo{
-    padding: 12px;
 }
